<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_MotorInputs" Id="{4a22e817-4986-4aea-b768-30722694843e}">
    <Declaration><![CDATA[TYPE ST_MotorInputs :
STRUCT
    Running  AT %I*  : BOOL;  //Assign with Digital Input EL1008
    Overload AT %I*  : BOOL; 
    Enable   AT %I*  : BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>